--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
             <optional>true</optional>
         </dependency>
 
+
+        <!-- 整合swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
     </dependencies>
 
 
